<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">OpenSoccer</string>
    <string name="home">Home</string>
    <string name="office">Office</string>
    <string name="dashboard">Dashboard</string>
    <string name="reports">Reports</string>
    <string name="notes">Notes</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="ranking">Ranking</string>
    <string name="statistics">Statistics</string>
    <string name="manager_of_year">Manager of the Year</string>
    <string name="transfers">Transfers</string>
    <string name="buy_players">Buy players</string>
    <string name="loan_players">Loan players</string>
    <string name="watch_list">Watch list</string>
    <string name="completed_transfers">Completed transfers</string>
    <string name="market_barker">Market barker</string>
    <string name="team">Team</string>
    <string name="lineup">Line-up</string>
    <string name="tactics">Tactics</string>
    <string name="squad">Squad</string>
    <string name="development">Development</string>
    <string name="contracts">Contracts</string>
    <string name="calendar">Calendar</string>
    <string name="season">Season</string>
    <string name="league">League</string>
    <string name="international_cup">International Cup</string>
    <string name="national_cup">National Cup</string>
    <string name="friendly_matches">Friendly matches</string>
    <string name="find_friendlies">Find friendlies</string>
    <string name="club">Club</string>
    <string name="finances">Finances</string>
    <string name="transactions">Transactions</string>
    <string name="personnel">Personnel</string>
    <string name="stadium">Stadium</string>
    <string name="requests">Requests</string>
    <string name="league_swap">League swap</string>
    <string name="support">Support</string>
    <string name="contact_staff">Contact the staff</string>
    <string name="short_hints">Short hints</string>
    <string name="rules">Rules</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="really_want_to_leave">Do you really want to leave?</string>
    <string name="leave">Leave</string>
    <string name="cancel">Cancel</string>
</resources>
